--- a/index.qmd
+++ b/index.qmd
@@ -1,80 +1,79 @@
 ---
-title: "Pavel Logačev, PhD"
+#title: "Pavel Logačev, PhD"
 pagetitle: "Pavel Logačev, PhD"
-subtitle: "Pricing & Revenue Optimization Data Scientist"
-image: assets/images/pavel.png
-image-alt: "Illustration of pricing"
+#subtitle: "Turning Complex Data into Profitable Decisions"
+#image: assets/images/pavel.png
+#image-alt: "Illustration of pricing"
 
-linkedin-card:
-    title: Pavel Logačev, PhD
-    description: |
-      Pricing & Revenue Optimization Data Scientist
-    #image: assets/silvia/img/silvia-social.png
+#linkedin-card:
+#  title: Pavel Logačev, PhD
+#description: |
+#  Pricing & Revenue Optimization Specialist
+#image: assets/silvia/img/silvia-social.png
 
-about:
-  template: solana
-  image-width: 28em
-  id: hero-heading
-  links:
-    - icon: linkedin
-      aria-label: "LinkedIn"
-      href: https://www.linkedin.com/in/pavel-logacev
-    - icon: github
-      aria-label: GitHub
-      href: https://github.com/plogacev
-    #
-    # to-do: add email
-    #
-    #- text: "{{< ai orcid >}}"
-    #  href: https://orcid.org/0000-0002-2837-2258
-    #- text: "{{< ai google-scholar >}}"
-    #  aria-label: "Google Scholar"
-    #  href: https://scholar.google.com/citations?user=fhbdTJIAAAAJ
-    #- text: "{{< fa envelope >}}"
-    #  aria-label: Newsletter
-    #  href: https://buttondown.com/spcanelon
-page-layout: full
+#- icon: github
+#  aria-label: GitHub
+#  href: https://github.com/plogacev
+#
+# to-do: add email
+#
+#- text: "{{< ai orcid >}}"
+#  href: https://orcid.org/0000-0002-2837-2258
+#- text: "{{< ai google-scholar >}}"
+#  aria-label: "Google Scholar"
+#  href: https://scholar.google.com/citations?user=fhbdTJIAAAAJ
+#- text: "{{< fa envelope >}}"
+#  aria-label: Newsletter
+#  href: https://buttondown.com/spcanelon
 
 execute: 
   freeze: false
-  echo: false
-  warning: false
+echo: false
+warning: false
 
 header-includes: >
-  <link rel="stylesheet" href="assets/index.css">
+  <link rel="stylesheet" href="assets/css/index.css">
 resources:
-  - assets/index.css
+  - assets/css/index.css
 ---
 
-<br><br>
+::: {.grid}
 
+<!-- Row 1 -->
+::: {.g-col-6 .text-center}
+![](assets/images/pavel.png){width="160px"}
 
-::: {#hero-heading}
+### Pavel Logačev, PhD 
+Turning Complex Data into Profitable Decisions
 
-I help companies improve business decisions through statistical modeling — especially in settings where data is messy, opportunities for experimentation are limited, and off-the-shelf solutions fall short.
+[{{< fa brands linkedin >}}](https://www.linkedin.com/in/pavel-logacev){.linkedin-icon aria-label="LinkedIn"}
 
-My focus areas include demand modeling, price elasticity estimation, and forecasting. I build bespoke models using Bayesian methods, tailored to the structure of the business problem — particularly when standard tools can't capture the complexity of real-world decisions.
+I help businesses set smarter prices and take smart decisions grounded in data — even when data is sparse, messy, or fragmented.
 
-I've worked across B2C and B2B contexts in close collaboration with various stakeholders — always aiming to understand how the business and sales processes actually work, so models reflect what matters and make the most of limited data.
-
-Open to freelance and consulting opportunities involving challenging modeling problems, including pricing optimization and marketing mix modeling.
-
-[Learn more about me &rarr;](/about){.about-links .subtitle}
+- Increase revenue through optimized pricing  
+- Gain reliable forecasts despite limited data  
+- Make confident decisions without relying on black‑box tools  
 
 :::
-<!-- hero-heading -->
 
-```{r write-manual-redirects}
-#| eval: false
+::: {.g-col-6}
+### See What’s Possible
 
-manual_redirects <-
-  readr::read_table(here::here("static", "_manualredirects.txt"),
-                    col_names = FALSE) |> 
-  dplyr::mutate(redirect = paste0(X1, " ", X2, " ", X3))
+Share your pricing challenge — I'll show you a path forward.
 
-manual_redirects <- manual_redirects$redirect
+<form action="https://formspree.io/f/xovlnyzg" method="POST" accept-charset="utf-8">
+  <input type="text" name="name" placeholder="Your full name" required style="width:100%;margin-bottom:0.8em;">
+  <input type="email" name="_replyto" placeholder="Your email address" required style="width:100%;margin-bottom:0.8em;">
+  <textarea name="message" placeholder="Tell me about your pricing challenge (e.g. price testing, forecasting, promotions)" rows="4" required style="width:100%;margin-bottom:0.8em;"></textarea>
+  <button type="submit" class="btn btn-primary" style="width:100%;">Send Message</button>
+</form>
+:::
 
-# write the _redirect file
-writeLines(manual_redirects, here::here("_site", "_redirects"))
 
-```
+<!-- Row 2 -->
+::: {.g-col-6}
+
+:::
+
+::: {.g-col-6}
+
