--- a/case_studies/index.qmd
+++ b/case_studies/index.qmd
@@ -1,9 +1,30 @@
 ---
-title: "Profitable Pricing"
-subtitle: "A Practical Guide to Pricing."
-page-layout: full
-toc: false
-format: html
-css: assets/css/expandable_bullets.css
+title: "Projects"
+author: ""
+comments: false
+citation: false
+description: |
+  This porfolio includes openly available educational material I have created,<br> along with works, software, and tools I have contributed to or designed.
+listing: 
+  contents:
+    - "/*/index.qmd"
+    - "/*/index.markdown"
+    - "/*/index.md"
+  type: grid
+  fields: [title, categories, date, image]
+  sort: "date desc"
+  filter-ui: false
+  image-align: left
+  image-height: 100%
+format: 
+  html: 
+    page-layout: full
+title-block-banner: false
+
+header-includes: >
+  <link rel="stylesheet" href="../assets/listing-default.css">
+  <link rel="" href="../assets/custom-css.js"> 
+resources:
+  - ../assets/listing-default.css
+  - ../assets/custom-css.js
 ---
-  
