--- a/case_studies/index.qmd
+++ b/case_studies/index.qmd
@@ -26,7 +26,7 @@ title-block-banner: false
 }
 
 .case-study-card {
-  border: 1px solid #e0e0e0;
+  border: 2px solid #0077b5;
   border-radius: 8px;
   cursor: pointer;
   transition: box-shadow 0.2s, transform 0.2s;
@@ -34,7 +34,6 @@ title-block-banner: false
   overflow: hidden;
   padding: 2rem 1.5rem;
   text-align: center;
-  border-bottom: 3px solid #0077b5;
 }
 
 .case-study-card:hover {
